--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     
     <script src="script.js"></script>
-    <button onclick="LoadBook()">LoadBook</button><button onclick="gotopage()">GotoPage:</button><button onclick="info()">i</button><p id="info">TEXT IMAGES ARE GIVEN AS A PREVIEW ONLY, COPYRIGHT PEARSON 2018. ONLY USE IF YOU HAVE BOUGHT THE ONLINE LICENSE.ActualPageNumber:1</p>
+    <button onclick="LoadBook()">LoadBook</button><button onclick="gotopage()">GotoPage:</button><button onclick="info()">BookNumbers</button><p id="info">TEXT IMAGES ARE GIVEN AS A PREVIEW ONLY, COPYRIGHT PEARSON 2018. ONLY USE IF YOU HAVE BOUGHT THE ONLINE LICENSE.ActualPageNumber:1</p>
   </body>
 </html>
